--- a/index.html
+++ b/index.html
@@ -5,31 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Morroco</title>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#sahara">Sahara</a></li>
+        <li><a href="#marrakech">Marrakech</a></li>
+        <li><a href="#taghazout">Taghazout</a></li>
+        <li><a href="#tanger">Tanger</a></li>
+      </ul>
+    </nav>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <h1>Welcome to Morocco</h1> 
-      </div>
-    </header>
-    <section class="maroc">
-      <div class="container">
-        <h2>This is Morocco !</h2>
-      </div>
-    </section>
     <section class="content">
       <div class="container">
         <h2>About Us</h2>
         <p>
-          Welcome to the heart of Morocco, where beauty and wonder thrive. Discover a land steeped in history and culture, with a legacy of triumph and tradition. From the bustling markets of Marrakech to the serene beaches of Agadir, Morocco is a place of endless discovery.
+          Welcome to the heart of Morocco, where beauty and wonder thrive.
+          Discover a land steeped in history and culture, with a legacy of
+          triumph and tradition. From the bustling markets of Marrakech to the
+          serene beaches of Agadir, Morocco is a place of endless discovery.
         </p>
         <p>
-          Our team is proud to showcase the beauty and wonder of Morocco, and we invite you to join us on this journey of discovery. With a rich history and a vibrant culture, Morocco is a place that will capture your heart and soul.
+          Our team is proud to showcase the beauty and wonder of Morocco, and we
+          invite you to join us on this journey of discovery. With a rich
+          history and a vibrant culture, Morocco is a place that will capture
+          your heart and soul.
         </p>
       </div>
     </section>
+    <div class="image-gallery">
+      <div class="image-container">
+        <img
+          src="https://images.unsplash.com/photo-1577147875613-2df406b2151b?q=80&w=3131&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Image 1"
+        />
+        <div class="learn-more">
+          <a href="index.html"><span>Visit Sahara</span></a>
+        </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="https://images.unsplash.com/photo-1486548730767-5c679e8eda6b?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hcm9jfGVufDB8MHwwfHx8Mg%3D%3D"
+          alt="Image 2"
+        />
+        <div class="learn-more">
+          <a href="index.html"><span> Explore Marrakech </span></a>
+        </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="https://images.unsplash.com/photo-1538050558691-dfaad62c8ea0?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fG1hcm9jfGVufDB8MHwwfHx8Mg%3D%3D"
+          alt="Image 3"
+        />
+        <div class="learn-more">
+          <a href="index.html"><span>Travel to Taghazout</span></a>
+        </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="https://images.unsplash.com/photo-1533501747004-381b96042e88?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Image 4"
+        />
+        <div class="learn-more">
+          <a href="index.html"><span> Take a look at ,Tanger City </span></a>
+        </div>
+      </div>
+    </div>
     <footer>
-      <p>Find more information on our website <a href="https://www.visitmorocco.com" target="_blank">Morocco tourism website</a>.</p>
+      <p>
+        Find more information on our website
+        <a href="index.html" target="_blank">Morocco tourism website</a>.
+      </p>
+      <div class="social-media">
+        <a href="https://www.facebook.com/" target="_blank"
+          ><img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Facebook_F_icon.svg/1200px-Facebook_F_icon.svg.png"
+            alt="Facebook"
+        /></a>
+        <a href="https://www.twitter.com/" target="_blank"
+          ><img
+            src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg"
+            alt="X"
+        /></a>
+        <a href="https://www.instagram.com/" target="_blank"
+          ><img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
+            alt="Instagram"
+        /></a>
+      </div>
     </footer>
   </body>
 </html>
