--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           alt="Image 4"
         />
         <div class="learn-more">
-          <a href="index.html"><span> Take a look at ,Tanger City </span></a>
+          <a href="index.html"><span> Take a look at Tanger City </span></a>
         </div>
       </div>
     </div>
